--- a/src/app/danger/confirmation-envoi/confirmation-envoi.component.html
+++ b/src/app/danger/confirmation-envoi/confirmation-envoi.component.html
@@ -6,7 +6,7 @@
 
     <Label text="SIGNALEMENT ENVOYE !" class="un"></Label>
 
-    <ContentView [nsRouterLink]="['/danger/historiqueSignalement']" row="0" class="danger_button2" text="" width="600px" height="600px" backgroundColor="#FF7F00"></ContentView> 
+    <Label [nsRouterLink]="['/danger/historiqueSignalement']" row="0" class="danger_button2" text="" width="55%" height="35%" backgroundColor="#FF7F00"></Label> 
 
     <Label [nsRouterLink]="['/utilisateur/station']" row="1" text="MERCI pour votre contribution active au programme de signalement partricipatif mis en place par la station. 
 
@@ -16,6 +16,7 @@ Vous pouvez suivre l’évolution de votre signalement dans la rubrique “Mes s
     <Label [nsRouterLink]="['/danger/historiqueSignalement']" col="1" row="0" text="&#xf573;" class="nt-icon fas" id="basDePage" height="100%"></Label>
 </GridLayout>
 </StackLayout>
+
 
 
 <!-- <StackLayout>
