--- a/src/app/danger/fiche-signalement/fiche-signalement.component.html
+++ b/src/app/danger/fiche-signalement/fiche-signalement.component.html
@@ -7,7 +7,7 @@
                 <Label col="0" text="20/04/2019 11:35" class="date_heure"></Label>
             </GridLayout>
             <GridLayout [nsRouterLink]="['/utilisateur']" columns="auto, 200">
-                <ContentView col="0" id="myDanger1" width="300px" height="300px" backgroundColor="#C4C4C4"></ContentView>
+                <ContentView col="0" id="myDanger1" width="110rem" height="110rem" backgroundColor="#C4C4C4"></ContentView>
                 <Label col="1" text="SIGNALER DANGER" class="declaration"></Label>
                 <Label col="1" text="Avalanche" class="categorie"></Label>
                 <Label col="1" text="STATUT : PRIS EN COMPTE" class="statut"></Label>
