--- a/src/app/danger/recapitulatif/recapitulatif.component.html
+++ b/src/app/danger/recapitulatif/recapitulatif.component.html
@@ -1,6 +1,6 @@
 <ScrollView> 
 <GridLayout rows="240, 20, 40, 50, 50, 50, 100, 50, *,*,*">
-    <ContentView row="0" class="danger_button" text="" width="600px" height="600px" backgroundColor="#000000"></ContentView> 
+    <ContentView row="0" class="danger_button" text="" width="240vw" height="300vh" backgroundColor="#000000"></ContentView> 
     <Label row="1" text="ENVOYER" id="envoyer"></Label>
     <Label row="2" [nsRouterLink]="['/danger/confirmationEnvoi']" text="&#xf064;" class="nt-icon fas" id="fleche_envoi"></Label> 
     <Label row="3" text="Localisation" backgroundColor="#000000" color="#F8FD07" fontSize="30px"></Label>
