--- a/src/app/informations/remontees/remontees.component.html
+++ b/src/app/informations/remontees/remontees.component.html
@@ -14,10 +14,10 @@ marginRight="5%">
     <Image row="2" column="2"  src=""></Image>
     <Image row="2" column="3"  src=""></Image>
     <Image row="2" column="4"  src=""></Image> -->
-    <Label color="black" class="page__content-placeholder" id="iconTapis" text="Tapis" row="0" column="0" fontWeight="Bold" fontSize="15" color="white"></Label>
-    <Label color="black" class="page__content-placeholder" id="iconTeleski" text="Teleski" row="0" column="1" fontWeight="Bold" fontSize="15" color="white"></Label>
-    <Label color="black" class="page__content-placeholder" id="iconTelesiege" text="Telesiège" row="0" column="2" fontWeight="Bold" fontSize="15" color="white"></Label>
-    <Label color="black" class="page__content-placeholder" id="iconTelecabine" text="Télécabine" row="0" column="3" fontWeight="Bold" fontSize="15" color="white"></Label>
+    <Label color="black" class="page__content-placeholder" id="iconTapis" text="" row="0" column="0" color="white"></Label>
+    <Label color="black" class="page__content-placeholder" id="iconTeleski" text="" row="0" column="1" color="white"></Label>
+    <Label color="black" class="page__content-placeholder" id="iconTelesiege" text="" row="0" column="2" color="white"></Label>
+    <Label color="black" class="page__content-placeholder" id="iconTelecabine" text="" row="0" column="3" color="white"></Label>
 
     <Label color="black" class="page__content-placeholder" text="2/2" row="1" column="0" fontWeight="Bold" fontSize="25"></Label>
     <Label color="black" class="page__content-placeholder" text="7/7" row="1" column="1" fontWeight="Bold" fontSize="25"></Label> 
@@ -28,8 +28,8 @@ marginRight="5%">
     <Label color="black" class="page__content-placeholder" text="BEARNAIS" row="0" column="0" fontWeight="Bold"></Label>
     <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="0" column="1" fontWeight="Bold" paddingLeft="20%" paddingRight="20%"></Label>
     <Label color="black" class="page__content-placeholder" text="9:00" row="0" column="2" fontWeight="Bold"></Label>
-    <Label class="page__content-placeholder" text="Maintenon  |" color="#008000" row="1" column="0" fontWeight="Bold"></Label>
-    <Label class="page__content-placeholder" text="Bearnais  |" color="#0000FF" row="1" column="1" fontWeight="Bold"></Label>
+    <Label class="page__content-placeholder" text="Maintenon" color="#008000" row="1" column="0" fontWeight="Bold"></Label>
+    <Label class="page__content-placeholder" text="Bearnais" color="#0000FF" row="1" column="1" fontWeight="Bold"></Label>
     <Label class="page__content-placeholder" text="Grenouilles" color="#0000FF" row="1" column="2"  fontWeight="Bold"></Label>
     <Label color="black" class="page__content-placeholder" text="SAPIN" row="2" column="0" fontWeight="Bold"></Label>
     <Label class="page__content-placeholder" id="status_open" text="Ouvert" row="2" column="1" fontWeight="Bold" paddingLeft="20%" paddingRight="20%"></Label>
