--- a/src/app/sos/gravite/gravite.component.html
+++ b/src/app/sos/gravite/gravite.component.html
@@ -1,38 +1,71 @@
-
 <ScrollView orientation="vertical">
-    <GridLayout class="page__content" backgroundColor="#3E3F32" rows="60,60,60,60,60,60,60,60"columns="*,*,*">
+    <GridLayout class="pagecontent" backgroundColor="#3E3F32" rows="60,60,60,60,60,60,60,60" columns=",">
+
+        <Label class="pagecontent-placeholder" text="SEVERES" row="0" column="0" colspan="2" color="white"
+            fontWeight="Bold" (tap)="gravitesos('gravite')"></Label>
+        <StackLayout class="hr" row="1" colspan="2"></StackLayout>
+
+        <Label class="pagecontent-placeholder" text="SERIEUSES" row="2" column="0" colspan="2" color="white"
+            fontWeight="Bold" (tap)="gravitesos('gravite')"></Label>
+        <StackLayout class="hr" row="3" colspan="2"></StackLayout>
+
+        <Label class="pagecontent-placeholder" text="MODEREES" row="4" column="0" colspan="2" color="white"
+            fontWeight="Bold" (tap)="gravitesos('gravite')"></Label>
+        <StackLayout class="hr" row="5" colspan="3"></StackLayout>
+
+
+        <Label class="page__content-placeholder" text="LEGERES" row="6" column="0" colspan="2" color="white"
+            fontWeight="Bold" (tap)="gravitesos('gravite')"></Label>
+        <StackLayout class="hr" row="7" colspan="3"></StackLayout>
+    </GridLayout>
+
+
+</ScrollView>
+<GridLayout>
+    <Button text="Envoyer" [nsRouterLink]="['/sos/appel']" backgroundColor="#0DF24D" color="white" 
+        fontSize="Large" class="soumission" marginTop="90%" marginBottom="5%"></Button>
+</GridLayout>
+
+
+
+
+
+
+
+<!-- <ScrollView orientation="vertical">
+    <GridLayout class="page__content" backgroundColor="#3E3F32" rows="60,60,60,60,60,60,60,60"columns="*,*,*"> -->
        <!-- <Label text="{{ checkYes ? '&#xf192;' : '&#xf10c;'}}" 
            class="{{ checkYes ? 'fontawesome' : 'radioBefore'}}" 
            (tap)="changeAction()" >
        </Label>  -->
-       <Switch checked="true"row="0" column="0"></Switch>
+       <!-- <Switch checked="true"row="0" column="0"></Switch>
        <Label class="page__content-placeholder" text="SEVERES" row="0" column="1" colspan="2" color="white"fontWeight="Bold"></Label>
-       <StackLayout class="hr" row="1"colspan="3"></StackLayout>
+       <StackLayout class="hr" row="1"colspan="3"></StackLayout> -->
        <!-- <Label text="{{ checkYes ? '&#xf192;' : '&#xf10c;'}}" 
            class="{{ checkYes ? 'fontawesome' : 'radioBefore'}}" 
            (tap)="changeAction()"row="2" column="1" >
        </Label>  -->
-       <Switch checked="true"row="2" column="0"></Switch>
+       <!-- <Switch checked="true"row="2" column="0"></Switch>
        <Label class="page__content-placeholder" text="SERIEUSES" row="2" column="1" colspan="2"color="white"fontWeight="Bold"></Label>
-       <StackLayout class="hr" row="3"colspan="3"></StackLayout>
+       <StackLayout class="hr" row="3"colspan="3"></StackLayout> -->
        <!-- <Label text="{{ checkYes ? '&#xf192;' : '&#xf10c;'}}" 
            class="{{ checkYes ? 'fontawesome' : 'radioBefore'}}" 
            (tap)="changeAction()"row="4" column="1" >
        </Label>  -->
-       <Switch checked="true"row="4" column="0"></Switch>
+       <!-- <Switch checked="true"row="4" column="0"></Switch>
        <Label class="page__content-placeholder" text="MODEREES" row="4" column="1" colspan="2"color="white"fontWeight="Bold"></Label>
-       <StackLayout class="hr" row="5"colspan="3"></StackLayout>
+       <StackLayout class="hr" row="5"colspan="3"></StackLayout> -->
        <!-- <Label text="{{ checkYes ? '&#xf192;' : '&#xf10c;'}}" 
            class="{{ checkYes ? 'fontawesome' : 'radioBefore'}}" 
            (tap)="changeAction()"row="6" column="1" >
        </Label>  -->
-       <Switch checked="true"row="6" column="0"></Switch>
+       <!-- <Switch checked="true"row="6" column="0"></Switch>
        <Label class="page__content-placeholder" text="LEGERES" row="6" column="1" colspan="2"color="white"fontWeight="Bold"></Label>
        <StackLayout class="hr" row="7"colspan="3"></StackLayout>
-   </GridLayout> 
+   </GridLayout>  -->
    
     
-   </ScrollView> <GridLayout>
+   <!-- </ScrollView> <GridLayout>
      <Button text="Envoyer" [nsRouterLink]="['/sos/appel']" backgroundColor="#0DF24D" color="white" (tap)="submit()" fontSize="Large"
    class="soumission" marginTop="100%"></Button>
-   </GridLayout>
+   </GridLayout> -->
