--- a/src/app/utilisateur/connexion/connexion.component.html
+++ b/src/app/utilisateur/connexion/connexion.component.html
@@ -1,4 +1,27 @@
-<GridLayout class="pagecontent"rows="50,35" columns=*>
+<StackLayout class="form">
+  <StackLayout class="input-field">
+      <Label text="CONNEXION" class="motDePasse"></Label>   
+  <TextField class="formSanteCss" hint="Entrez votre mot de passe" color="black" background="lightgrey" width="90%" height="9%" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
+  <Button [nsRouterLink]="['/utilisateur/choixstation']" text="ME CONNECTER" width="90%" height="9%" backgroundColor="black"; color="yellow"></Button> 
+</StackLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <GridLayout class="pagecontent"rows="50,35" columns=*>
   <Label class="pagecontent-placeholder" text="  Vous souhaitez utiliser de nouveau notre application pour votre sortie en station. " fontSize="15"row="0" color="black" textWrap="true"></Label>
   <Label class="pagecontent-placeholder" text="  CONNECTEZ-VOUS!! " row="1" textAlign="center"  fontSize="25" color="black" fontWeight="Bold" textWrap="true"></Label>
 </GridLayout>
@@ -11,4 +34,4 @@
   </StackLayout>
 
   <Button [nsRouterLink]="['/utilisateur/choixstation']" backgroundColor="black" color="#F8FD07"text="connexion" (tap)="submit()"></Button>
-</StackLayout>
+</StackLayout> -->
