--- a/src/app/utilisateur/gestionmdp/gestionmdp.component.html
+++ b/src/app/utilisateur/gestionmdp/gestionmdp.component.html
@@ -9,7 +9,7 @@
     </FlexboxLayout>
 </StackLayout> -->
 
-<StackLayout class="form" marginTop="2%" rows="20, 20, 20, 20">
+<!-- <StackLayout class="form" marginTop="2%" rows="20, 20, 20, 20">
     <StackLayout class="input-field">
     <Label text="GESTION MOT DE PASSE" class="motDePasse"></Label>
     <TextField class="" hint="E-mail associé au compte" marginTop="5%"></TextField>
@@ -27,7 +27,26 @@
         <Button [nsRouterLink]="['/utilisateur/gestioncompte']" text="VALIDER" class="valider_mdp"></Button> 
     </FlexboxLayout>
 
+</StackLayout> -->
+
+
+<StackLayout class="form">
+    <StackLayout class="input-field">
+        <Label text="GESTION MOT DE PASSE" class="motDePasse"></Label>   
+    <TextField class="formSanteCss" hint="E-mail associé au compte" color="black" background="lightgrey" width="90%" height="9%" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
+    <TextField class="formSanteCss" hint="Nouveau mot de passe" color="black" background="lightgrey" width="90%" height="9%" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
+    <TextField class="formSanteCss" hint="Confirmation mot de passe" color="black" background="lightgrey" width="90%" height="9%" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
+    <Button [nsRouterLink]="['/utilisateur/gestioncompte']" text="MODIFIER" width="90%" height="9%" backgroundColor="yellow"; color="black"></Button> 
 </StackLayout>
+
+
+
+
+
+
+
+
+
 <!-- <BottomNavigation height="100%">
     <TabStrip>
         <TabStripItem>
