--- a/src/app/sos/activite/activite.component.html
+++ b/src/app/sos/activite/activite.component.html
@@ -6,6 +6,36 @@
         <Label backgroundColor="#3E3F32" class="pagecontent-placeholder" text="Le blessé pratique" row="0"
             color="white" fontSize=25px; fontWeight="Bold" marginbottom="100%" marginLeft="10%"
             marginRight="10%"></Label>
+        <Label class="position" [nsRouterLink]="['/sos/blessure']" color="white" paddingTop="50%" paddingLeft="0%" class="bouttonchute" class="iconetotal"
+            text="M" color="white" fontWeight="Bold" width="400px" height="400px"
+            backgroundColor="#FF0000" (tap)="activitesos('activite')"></Label>
+        <Label  class="bouttonchute" [nsRouterLink]="['/sos/blessure']" color="white" paddingTop="40%" paddingLeft="10%" text="H"
+            class="iconetotal" width="400px" height="400px" fontWeight="Bold" backgroundColor="#FF0000" (tap)="activitesos('activite')"></Label>
+        <Label  class="bouttonchute" [nsRouterLink]="['/sos/blessure']" color="white" paddingTop="30%" paddingLeft="10%" text="K" class="iconeluge"
+            width="400px" height="400px" fontWeight="Bold" backgroundColor="#FF0000" (tap)="activitesos('activite')"></Label>
+
+        <Label  class="bouttonchute" [nsRouterLink]="['/sos/blessure']" color="white" paddingTop="30%" paddingLeft="12%" text="I" class="iconetotal"
+            width="400px" height="400px" fontWeight="Bold" backgroundColor="#FF0000" (tap)="activitesos('activite')"></Label>
+
+        <!-- <Button text="Envoyer"  backgroundColor="#0DF24D" color="white" (tap)="submit()"
+            fontSize="Large" class="soumission" marginTop="100%"></Button> -->
+        </FlexboxLayout>
+    </GridLayout>
+
+
+
+
+
+
+
+<!-- <ScrollView>
+    <GridLayout class="pagecontent" backgroundColor="#3E3F32">
+        <FlexboxLayout backgroundColor="#3E3F32" flexDirection="row" flexWrap="wrap" justifyContent="space-around"
+            marginTop="50%">
+
+        <Label backgroundColor="#3E3F32" class="pagecontent-placeholder" text="Le blessé pratique" row="0"
+            color="white" fontSize=25px; fontWeight="Bold" marginbottom="100%" marginLeft="10%"
+            marginRight="10%"></Label>
         <Label class="position" [nsRouterLink]="['/sos/blessure']" color="white" paddingTop="100%" paddingLeft="55%" class="bouttonchute" class="pictureA1"
             text="Ski" color="white" fontWeight="Bold" width="400px" height="400px"
             backgroundColor="#FF0000"></Label>
@@ -16,12 +46,6 @@
 
         <Label  class="bouttonchute" [nsRouterLink]="['/sos/blessure']" color="white" paddingTop="100%" paddingLeft="35%" text="Randonnée" class="pictureD1"
             width="400px" height="400px" fontWeight="Bold" backgroundColor="#FF0000"></Label>
-
-        <!-- <Button text="Envoyer"  backgroundColor="#0DF24D" color="white" (tap)="submit()"
-            fontSize="Large" class="soumission" marginTop="100%"></Button> -->
         </FlexboxLayout>
     </GridLayout>
-
-
-
-</ScrollView>
+</ScrollView> -->
